--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -3,6 +3,8 @@
 <app-product-desccription></app-product-desccription>
 </div>
 <div class="row">
+  <div class="col-sm-8">
 <app-product-tracklisting></app-product-tracklisting>
+  </div>
 </div>
 </main>
