--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,7 +1,4 @@
 <ul>
-    <li *ngfor=""let product of products>
-        <div class="col-sm-5">
-            <span class="album-name">{{product.albumName}}</span>
-          </div>
+    <li *ngfor="let product of products">{{product.albumName}}
     </li>
 </ul>
