--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,5 @@
 <ul>
-    <li *ngfor="let product of products">{{product.albumName}}
+    <li *ngfor="let product of products">
+        <a routerLink="/product/{{product.id}}" routerLinkActive="active">{{product.albumName}}</a> 
     </li>
 </ul>
