The Product Description Component

--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,6 +1,6 @@
 <main>
 <div class="row">
-<app-product-desccription></app-product-desccription>
+<app-product-description></app-product-description>
 </div>
 <div class="row">
 <app-product-tracklisting></app-product-tracklisting>
